--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start:dev": "nodemon -e '*' ./bin/www",
+    "dev": "nodemon -e '*' ./bin/www",
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "bcrypt": "^5.0.0",
+    "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.5",
+    "debug": "^2.6.9",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "express-react-views": "^0.11.0",
+    "express-session": "^1.17.1",
     "mongoose": "^5.10.15",
-    "morgan": "~1.9.1",
+    "morgan": "^1.9.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
