--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-react-views": "^0.11.0",
+    "express-session": "^1.17.1",
     "mongoose": "^5.10.15",
     "morgan": "~1.9.1",
     "react": "^17.0.1",
