--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-react-views": "^0.11.0",
+    "express-session": "^1.17.1",
     "mongoose": "^5.10.15",
     "morgan": "~1.9.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "zxcvb": "^1.0.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
